# kenkun

./: .gitignore  README.md  build.bat  clean.bat  deploy.bat  deploy_test.bat  install.bat  kenkun.cfg  launch.py  pyproject.toml  setup.cfg
skeletons/fh_vuexy/: .gitignore  app.py  generate.py  pyproject.toml.tpl  requirements.txt
skeletons/fh_vuexy/assets/js/: main.js
skeletons/fh_vuexy/assets/js/custom/: form-validation.js
skeletons/fh_vuexy/base/: engine.py
skeletons/fh_vuexy/controller/: auth_controller.py
skeletons/fh_vuexy/etc/: settings.py.tpl
skeletons/fh_vuexy/fh_vuexy/: __init__.py
skeletons/fh_vuexy/kenkun/: __init__.py
skeletons/fh_vuexy/kenkun/templates/controller/: controller.tpl
skeletons/fh_vuexy/kenkun/templates/view/: __init__.tpl  create.tpl  edit.tpl  show.tpl
skeletons/fh_vuexy/mongodb/: base.py  connection.py  exception.py
skeletons/fh_vuexy/service/: crud_service.py  hanzo_service.py
skeletons/fh_vuexy/view/: cards_page.py  forms_page.py  main_page.py  not_found_page.py  profile_page.py
skeletons/fh_vuexy/view/auth/: __init__.py
skeletons/fh_vuexy/view/templates/: footer.py  left_menu.py.tpl  main_layout.py  top_menu.py
src/kenkun/: __init__.py  __main__.py  kk.bat
src/kenkun/util/: fields.py
