[project]
name = "kenkun"
version = "0.1.4"
description = "A cli ui to generate projects in python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [        
    "jinja2"
]

[build-system]
requires = [    
    "setuptools>=61.0",    
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
kk = "kenkun.__init__:main"
