[metadata]
name = kenkun
version = 0.1.2
author = Sylvio Ximenez de Azevedo Neto
author_email = sylvioazevedo@gmail.com
description = A cli ui to generate projects in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sylvioazevedo/kenkun
project_urls =
    Bug Tracker = https://github.com/sylvioazevedo/kenkun/issues

classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =    
    jinja2==3.0.1
    
[options.packages.find]
where = src

